--- a/Collision_Checker/Collision_Checker.vcxproj
+++ b/Collision_Checker/Collision_Checker.vcxproj
@@ -115,6 +115,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Checker.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -316,6 +317,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Checker.hpp" />
+    <ClInclude Include="My_Button.hpp" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
