--- a/Collision_Checker/Collision_Checker.vcxproj.filters
+++ b/Collision_Checker/Collision_Checker.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Checker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -777,6 +780,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Checker.hpp">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="My_Button.hpp">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
